# nvenc_develop

./: README
nvenc_bt2020_hlg/: CMakeLists.txt  bgr888_to_yuv420p10le.py  build.sh  cfg.json  nv_encoder.cpp  nv_encoder.h  readme.txt
nvenc_bt2020_hlg/output/: main.out
nvenc_bt2020_pq/: bgr888_to_yuv420p10le.py  cfg.json  main.cpp  nv_encoder.cpp
nvenc_bt2020_pq/output/: main.out
